// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading renders correctly when no loading 1`] = `
.c0 {
  opacity: 0.75;
}

<div
  class="c0"
>
  foo
</div>
`;

exports[`Loading renders correctly when not loading 1`] = `
<div
  class=""
>
  foo
</div>
`;

exports[`Mask renders correctly when no initiated 1`] = `null`;

exports[`Mask renders correctly when not initiated 1`] = `
Array [
  .c0 {
  background-color: #eceff1;
  height: 35rem;
  margin-bottom: 1.5rem;
}

@media (min-width:62em) {
  .c0 {
    height: 9rem;
  }
}

<div
    class="c0"
  />,
  .c0 {
  background-color: #eceff1;
  height: 35rem;
  margin-bottom: 1.5rem;
}

@media (min-width:62em) {
  .c0 {
    height: 9rem;
  }
}

<div
    class="c0"
  />,
  .c0 {
  background-color: #eceff1;
  height: 35rem;
  margin-bottom: 1.5rem;
}

@media (min-width:62em) {
  .c0 {
    height: 9rem;
  }
}

<div
    class="c0"
  />,
]
`;
